feat: add lili pictures

--- a/package.json
+++ b/package.json
@@ -6,12 +6,36 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "three": "^0.163.0",
     "typescript": "^5.4.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@emotion/babel-plugin": "^11.3.0",
+    "@emotion/css": "^11.1.3",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@rematch/core": "^2.0.1",
+    "@types/uuid": "^9.0.7",
+    "ahooks": "^3.7.8",
+    "axios": "^0.27.2",
+    "dayjs": "^1.10.5",
+    "eslint-config-prettier": "^6.10.1",
+    "highcharts": "^8.1.2",
+    "highcharts-react-official": "^3.0.0",
+    "husky": "^4.2.3",
+    "lint-staged": "^10.0.8",
+    "prettier": "^1.19.1",
+    "prettier-eslint": "^9.0.1",
+    "prettier-eslint-cli": "^5.0.0",
+    "qiankun": "^2.10.15",
+    "react-hook-form": "^7.48.2",
+    "react-redux": "^7.2.4",
+    "skywalking-client-js": "^0.10.0",
+    "uuid": "^9.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
