--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,7 @@
-server {
+# 定义一个 http 块
+http {
+    # 定义一个 server 块
+   server {
     listen 80;
     server_name localhost;
 
@@ -7,4 +10,5 @@ server {
         index index.html;
         try_files $uri $uri/ /index.html;
     }
+}
 }
