--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,11 @@
+# nginx.conf
+
+# 定义 events 部分
+events {
+  worker_connections 1024;   # 设置每个工作进程的最大连接数
+}
 # 定义一个 http 块
 http {
-
-      # 定义 events 部分
-    events {
-        worker_connections 1024;   # 设置每个工作进程的最大连接数
-    }
-
     # 定义一个 server 块
    server {
     listen 80;
