--- a/nginx.conf
+++ b/nginx.conf
@@ -6,6 +6,11 @@ events {
 }
 # 定义一个 http 块
 http {
+
+    types {
+        application/pdf pdf;
+    }
+
     # 定义一个 server 块
    server {
     listen 80;
