--- a/package.json
+++ b/package.json
@@ -3,39 +3,43 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.16.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0",
-    "react-scripts": "5.0.1",
-    "three": "^0.163.0",
-    "typescript": "^5.4.5",
-    "web-vitals": "^2.1.4",
     "@emotion/babel-plugin": "^11.3.0",
     "@emotion/css": "^11.1.3",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@rematch/core": "^2.0.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "@types/uuid": "^9.0.7",
     "ahooks": "^3.7.8",
+    "antd": "^5.16.4",
     "axios": "^0.27.2",
     "dayjs": "^1.10.5",
+    "emotion": "^11.0.0",
     "eslint-config-prettier": "^6.10.1",
     "highcharts": "^8.1.2",
     "highcharts-react-official": "^3.0.0",
     "husky": "^4.2.3",
     "lint-staged": "^10.0.8",
+    "lodash": "^4.17.21",
     "prettier": "^1.19.1",
     "prettier-eslint": "^9.0.1",
     "prettier-eslint-cli": "^5.0.0",
     "qiankun": "^2.10.15",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^6.23.0",
+    "react-scripts": "5.0.1",
     "skywalking-client-js": "^0.10.0",
-    "uuid": "^9.0.1"
+    "three": "^0.163.0",
+    "typescript": "^5.4.5",
+    "uuid": "^9.0.1",
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -62,6 +66,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.0",
     "@types/three": "^0.163.0"
   }
 }
