--- a/package.json
+++ b/package.json
@@ -68,5 +68,12 @@
   "devDependencies": {
     "@types/lodash": "^4.17.0",
     "@types/three": "^0.163.0"
+  },
+  "resolutions": {
+    "eslint": "^8.57.0",
+    "glob": "^9.3.5",
+    "rimraf": "^4.4.1",
+    "svgo": "^3.0.2",
+    "workbox-webpack-plugin": "^7.0.0"
   }
 }
