--- a/nginx.conf
+++ b/nginx.conf
@@ -1,26 +1,25 @@
-# nginx.conf
+user  nginx;
+worker_processes  auto;
 
-# 定义 events 部分
+error_log  /var/log/nginx/error.log notice;
+pid        /var/run/nginx.pid;
+
 events {
-  worker_connections 1024;   # 设置每个工作进程的最大连接数
+    worker_connections  1024;
 }
-# 定义一个 http 块
+
 http {
-    include /etc/nginx/mime.types;
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    types {
-        application/pdf pdf;
-    }
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    # 定义一个 server 块
-   server {
-    listen 80;
-    server_name localhost;
+    access_log  /var/log/nginx/access.log  main;
 
-    location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri $uri/ /index.html;
-    }
-}
+    sendfile        on;
+    keepalive_timeout  65;
+
+    include /etc/nginx/conf.d/*.conf;
 }
