fix: dockerfile & nginx

--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -1,21 +1,18 @@
 server {
     listen       80;
     server_name  localhost;
-    
-    # React路由支持
+    root         /usr/share/nginx/html;
+    index        index.html;
+
+    # 处理前端路由（React/Vue SPA 必需）
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html;
         try_files $uri $uri/ /index.html;
     }
 
-    # 其他优化配置
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-
-    # 静态资源缓存
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+    # 处理静态资源
+    location /static/ {
+        alias /usr/share/nginx/html/static/;
         expires 1y;
-        add_header Cache-Control "public, no-transform";
+        access_log off;
     }
 }
