--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,35 @@
 {
-    "compilerOptions": {
-      "target": "es5",
-      "lib": ["dom", "dom.iterable", "esnext"],
-      "allowJs": true,
-      "skipLibCheck": true,
-      "esModuleInterop": true,
-      "allowSyntheticDefaultImports": true,
-      "strict": true,
-      "forceConsistentCasingInFileNames": true,
-      "module": "esnext",
-      "moduleResolution": "node",
-      "jsx": "react",
-      "noEmit": true,
-      "isolatedModules": true,
-      "resolveJsonModule": true,
-      "baseUrl": "./src",
-      "paths": {
-        "@/*": ["*"]
-      }
+  "compilerOptions": {
+    "paths": {
+      "@/*": [
+        "src/*"
+      ],
+      "@/fetch": [
+        "src/fetch/index"
+      ]
     },
-    "include": ["src"]
-  }
-  
+    "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "jsx": "react-jsx",
+    // "jsxImportSource": "@emotion/react",
+    "noEmit": true,
+    "isolatedModules": true,
+    "resolveJsonModule": true,
+    "baseUrl": "./src",
+  },
+  "include": [
+    "src"
+  ]
+}
