--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/babel-plugin": "^11.3.0",
-    "@emotion/css": "^11.1.3",
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
+    "@emotion/babel-plugin": "^11.13.5",
+    "@emotion/css": "^11.13.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@rematch/core": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -26,7 +26,6 @@
     "husky": "^4.2.3",
     "lint-staged": "^10.0.8",
     "lodash": "^4.17.21",
-    "prettier": "^1.19.1",
     "prettier-eslint": "^16.4.2",
     "prettier-eslint-cli": "^8.0.1",
     "qiankun": "^2.10.15",
@@ -42,7 +41,8 @@
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "prettier": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -74,6 +74,8 @@
     "@babel/plugin-transform-react-jsx": "^7.27.1",
     "@testing-library/dom": "^10.4.0",
     "@types/lodash": "^4.17.0",
+    "@types/react": "18",
+    "@types/react-dom": "18",
     "@types/three": "^0.163.0",
     "redux": "^5.0.1"
   },
@@ -83,5 +85,6 @@
     "rimraf": "^4.4.1",
     "svgo": "^3.0.2",
     "workbox-webpack-plugin": "^7.0.0"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
