--- a/package.json
+++ b/package.json
@@ -26,23 +26,27 @@
     "husky": "^4.2.3",
     "lint-staged": "^10.0.8",
     "lodash": "^4.17.21",
+    "prettier": "^3.0.0",
     "prettier-eslint": "^16.4.2",
     "prettier-eslint-cli": "^8.0.1",
+    "prism-react-renderer": "^2.4.1",
     "qiankun": "^2.10.15",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-icons": "^5.5.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "skywalking-client-js": "^0.10.0",
+    "tailwind": "^4.0.0",
     "three": "^0.163.0",
     "typescript": "^5.4.5",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4",
-    "prettier": "^3.0.0"
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -75,6 +79,7 @@
     "@testing-library/dom": "^10.4.0",
     "@types/lodash": "^4.17.0",
     "@types/react": "18",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "18",
     "@types/three": "^0.163.0",
     "redux": "^5.0.1"
