--- a/package.json
+++ b/package.json
@@ -91,5 +91,6 @@
     "svgo": "^3.0.2",
     "workbox-webpack-plugin": "^7.0.0"
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:3001",
+  "packageManager": "pnpm@10.12.4+sha512.5ea8b0deed94ed68691c9bad4c955492705c5eeb8a87ef86bc62c74a26b037b08ff9570f108b2e4dbd1dd1a9186fea925e527f141c648e85af45631074680184"
 }
