--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -15,4 +15,13 @@ server {
         expires 1y;
         access_log off;
     }
+
+    # 简道云API代理（纯净版，不处理任何请求头）
+    location /jiandaoyun/ {
+        proxy_pass https://api.jiandaoyun.com/api/v5/;
+        proxy_ssl_server_name on;
+        proxy_http_version 1.1;
+        proxy_set_header Host api.jiandaoyun.com;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
 }
