--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -4,24 +4,27 @@ server {
     root         /usr/share/nginx/html;
     index        index.html;
 
-    # 处理前端路由（React/Vue SPA 必需）
+    # 处理前端路由
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # 处理静态资源
+    # 静态资源处理
     location /static/ {
         alias /usr/share/nginx/html/static/;
         expires 1y;
         access_log off;
     }
 
-    # 简道云API代理（纯净版，不处理任何请求头）
-    location /jiandaoyun/ {
-        proxy_pass https://api.jiandaoyun.com/api/v5/;
+    # 修正后的简道云代理配置
+    location ~ ^/jiandaoyun(/.*)$ {
+        proxy_pass https://api.jiandaoyun.com/api/v5$1;
         proxy_ssl_server_name on;
         proxy_http_version 1.1;
+        
+        # 必须保留的头部
         proxy_set_header Host api.jiandaoyun.com;
         proxy_set_header X-Real-IP $remote_addr;
+        
     }
 }
