feat: login for online-HO

--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -16,15 +16,22 @@ server {
         access_log off;
     }
 
-    # 修正后的简道云代理配置
+    # 简道云API代理（关键修正）
     location ~ ^/jiandaoyun(/.*)$ {
-        proxy_pass https://api.jiandaoyun.com/api/v5$1;
+        # 使用变量避免DNS缓存问题
+        set $jdy_target "api.jiandaoyun.com";
+        
+        proxy_pass https://$jdy_target/api/v5$1;
         proxy_ssl_server_name on;
-        proxy_http_version 1.1;
         
-        # 必须保留的头部
-        proxy_set_header Host api.jiandaoyun.com;
+        # 超时设置（单位秒）
+        proxy_connect_timeout 30;
+        proxy_read_timeout 120;
+        proxy_send_timeout 120;
+        
+        # 必要头部
+        proxy_set_header Host $jdy_target;
         proxy_set_header X-Real-IP $remote_addr;
-        
+
     }
 }
