feat: login for online-HO

--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -4,34 +4,79 @@ server {
     root         /usr/share/nginx/html;
     index        index.html;
 
-    # 处理前端路由
+    # 处理前端路由（React/Vue SPA必需）
     location / {
         try_files $uri $uri/ /index.html;
+        
+        # 禁用HTML缓存
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
     }
 
-    # 静态资源处理
+    # 处理静态资源
     location /static/ {
         alias /usr/share/nginx/html/static/;
         expires 1y;
         access_log off;
+        add_header Cache-Control "public, immutable";
     }
 
-    # 简道云API代理（关键修正）
+    # 本地后端API代理（对应setupProxy.js中的/api配置）
+    location /api {
+        proxy_pass http://localhost:3001;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_cache_bypass $http_upgrade;
+        
+        # 跨域支持
+        add_header Access-Control-Allow-Origin $http_origin always;
+        add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header Access-Control-Allow-Headers '*' always;
+        
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
+    }
+
+    # 简道云API代理（对应setupProxy.js中的/jiandaoyun配置）
     location ~ ^/jiandaoyun(/.*)$ {
-        # 使用变量避免DNS缓存问题
+        resolver 8.8.8.8 114.114.114.114 valid=30s;
         set $jdy_target "api.jiandaoyun.com";
         
         proxy_pass https://$jdy_target/api/v5$1;
         proxy_ssl_server_name on;
+        proxy_http_version 1.1;
         
-        # 超时设置（单位秒）
+        # 超时设置（单位：秒）
         proxy_connect_timeout 30;
         proxy_read_timeout 120;
         proxy_send_timeout 120;
         
-        # 必要头部
+        # 必须的头部设置
         proxy_set_header Host $jdy_target;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        
+        # 调试信息（生产环境可移除）
+        add_header X-Backend-URL "https://$jdy_target/api/v5$1";
+    }
 
+    # 禁止访问敏感文件
+    location ~ /\.(?!well-known) {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+
+    # 错误页面处理
+    error_page 404 /index.html;
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
     }
 }
