--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 user  nginx;
 worker_processes  auto;
 
-error_log  /var/log/nginx/error.log notice;
+error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
 events {
@@ -20,6 +20,10 @@ http {
 
     sendfile        on;
     keepalive_timeout  65;
+
+    # 开启gzip压缩
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
     include /etc/nginx/conf.d/*.conf;
 }
