feat: login for online-HO

--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -4,6 +4,11 @@ server {
     root         /usr/share/nginx/html;
     index        index.html;
 
+    # 全局性能优化
+    aio on;
+    directio 512;
+    tcp_nopush on;
+
     # 处理前端路由（React/Vue SPA必需）
     location / {
         try_files $uri $uri/ /index.html;
@@ -20,50 +25,85 @@ server {
         expires 1y;
         access_log off;
         add_header Cache-Control "public, immutable";
+        
+        # 开启零拷贝传输
+        sendfile on;
+        tcp_nopush on;
     }
 
-    # 本地后端API代理（对应setupProxy.js中的/api配置）
+    # 本地后端API代理
     location /api {
-        proxy_pass http://localhost:3001;
+        proxy_pass http://backend:3001;  # 建议使用服务名而非localhost
         proxy_http_version 1.1;
+        
+        # 连接优化
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
+        proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_cache_bypass $http_upgrade;
+        
+        # 缓冲区优化
+        proxy_buffer_size 128k;
+        proxy_buffers 4 256k;
+        proxy_busy_buffers_size 256k;
         
         # 跨域支持
         add_header Access-Control-Allow-Origin $http_origin always;
         add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS' always;
         add_header Access-Control-Allow-Headers '*' always;
+        add_header Access-Control-Allow-Credentials "true" always;
         
+        # 预检请求处理
         if ($request_method = 'OPTIONS') {
             return 204;
         }
     }
 
-    # 简道云API代理（对应setupProxy.js中的/jiandaoyun配置）
+    # 简道云API代理（已修复路径问题）
     location ~ ^/jiandaoyun(/.*)$ {
+        # 动态DNS解析
         resolver 8.8.8.8 114.114.114.114 valid=30s;
         set $jdy_target "api.jiandaoyun.com";
         
-        proxy_pass https://$jdy_target/api/v5$1;
+        # 关键修正：移除重复的api/v5前缀
+        proxy_pass https://$jdy_target$1;
+        
+        # SSL安全配置
         proxy_ssl_server_name on;
-        proxy_http_version 1.1;
+        proxy_ssl_protocols TLSv1.2 TLSv1.3;
+        proxy_ssl_verify on;
         
-        # 超时设置（单位：秒）
-        proxy_connect_timeout 30;
-        proxy_read_timeout 120;
-        proxy_send_timeout 120;
+        # 超时设置（单位秒）
+        proxy_connect_timeout 30s;
+        proxy_read_timeout 120s;
+        proxy_send_timeout 120s;
         
-        # 必须的头部设置
+        # 必须的头部
         proxy_set_header Host $jdy_target;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         
-        # 调试信息（生产环境可移除）
-        add_header X-Backend-URL "https://$jdy_target/api/v5$1";
+        # 简道云特殊要求
+        proxy_set_header Accept "application/json";
+        proxy_set_header Content-Type "application/json";
+        proxy_set_header Referer "https://$jdy_target";
+        
+        # 缓冲区配置
+        proxy_buffer_size 128k;
+        proxy_buffers 4 256k;
+        proxy_busy_buffers_size 256k;
+        
+        # 调试头（生产环境应移除）
+        add_header X-Backend-Debug "https://$jdy_target$1" always;
+        add_header X-Request-Debug "$request" always;
+    }
+
+    # 健康检查端点
+    location /health {
+        access_log off;
+        return 200 'OK';
+        add_header Content-Type text/plain;
     }
 
     # 禁止访问敏感文件
@@ -77,6 +117,7 @@ server {
     error_page 404 /index.html;
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
+        internal;
         root /usr/share/nginx/html;
     }
 }
