--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -33,7 +33,7 @@ server {
 
     # 本地后端API代理
     location /api {
-        proxy_pass http://backend:3001;  # 建议使用服务名而非localhost
+        proxy_pass http://localhost:3001;  # 建议使用服务名而非localhost
         proxy_http_version 1.1;
         
         # 连接优化
