feat: login for online-HO

--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -1,8 +1,16 @@
 server {
     listen       80;
+    listen       [::]:80;
     server_name  localhost;
     root         /usr/share/nginx/html;
     index        index.html;
+
+    # 全局gzip压缩设置
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_min_length 1024;
 
     # 处理前端路由（React/Vue SPA必需）
     location / {
@@ -12,6 +20,11 @@ server {
         add_header Cache-Control "no-cache, no-store, must-revalidate";
         add_header Pragma "no-cache";
         add_header Expires "0";
+        
+        # 安全头
+        add_header X-Content-Type-Options "nosniff";
+        add_header X-Frame-Options "SAMEORIGIN";
+        add_header X-XSS-Protection "1; mode=block";
     }
 
     # 处理静态资源
@@ -20,9 +33,12 @@ server {
         expires 1y;
         access_log off;
         add_header Cache-Control "public, immutable";
+        
+        # 静态资源gzip预压缩支持
+        gzip_static on;
     }
 
-    # 本地后端API代理（对应setupProxy.js中的/api配置）
+    # 本地后端API代理
     location /api {
         proxy_pass http://localhost:3001;
         proxy_http_version 1.1;
@@ -33,8 +49,14 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_cache_bypass $http_upgrade;
         
+        # 超时设置
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+        
         # 跨域支持
         add_header Access-Control-Allow-Origin $http_origin always;
+        add_header Access-Control-Allow-Credentials true always;
         add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS' always;
         add_header Access-Control-Allow-Headers '*' always;
         
@@ -42,7 +64,6 @@ server {
             return 204;
         }
     }
-
 
     # 简道云API代理
     location ~ ^/jiandaoyun(/.*)$ {
@@ -52,20 +73,29 @@ server {
         proxy_pass https://$jdy_target$1;
         proxy_ssl_server_name on;
         
-        # SSL验证配置（三选一）
+        # 选择一种SSL验证方式（删除了重复配置）
         # 选项1：严格验证（生产）
         proxy_ssl_verify on;
         proxy_ssl_trusted_certificate /etc/ssl/certs/ca-certificates.crt;
         
         # 选项2：仅验证证书存在（折中）
-        proxy_ssl_verify on;
-        proxy_ssl_verify_depth 1;
+        # proxy_ssl_verify on;
+        # proxy_ssl_verify_depth 1;
         
         # 选项3：禁用验证（测试）
         # proxy_ssl_verify off;
         
-        # ...其他配置保持不变...
+        # 其他代理设置
+        proxy_set_header Host $jdy_target;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        
+        # 超时设置
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
     }
+
     # 禁止访问敏感文件
     location ~ /\.(?!well-known) {
         deny all;
